<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="?attr/actionBarSize"
        tools:ignore="MissingConstraints">
        <!--  어떻게 하면 Layout끼리 겹치지 않게 할 수 있을까?-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/play_with_text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_round"
                    android:hint="@string/play_with_id"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:rowCount="2"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btn_choice_station"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:background="#FFD0D6"
                    android:text="역 선택"
                    android:textColor="@color/white"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"/>

                <AutoCompleteTextView
                    android:id="@+id/et_choice_station"
                    android:layout_width="200dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/edit_round"
                    android:hint="@string/choicestation"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dip"
                    android:background="#FFD0D6"
                    android:text="@string/found_play"
                    android:textColor="@color/white" />



                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/et_findPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:text="@string/found_play_text"
                        android:textColor="@color/black" />

                    <!-- 링크 클링    -->
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>